Changelog
=========


1.11.1 (unreleased)
-------------------

- New JSON API implemented, accessible with `/upgrades-api`.
  [jone]

- Executioner: `install_upgrades_by_api_ids` was added, allowing to install
  a selection of upgrades identified by API ugprade ids.
  [jone]

- Gatherer: `get_upgrades_by_api_ids` was added, returning upgrade infos
  for a selection of API upgrade ids.
  [jone]

- Gatherer: `get_upgrades` is deprecated and replaced by `get_profiles`.
  `get_profiles` now has a `proposed_only` flag.
  [jone]


1.11.0 (2015-01-08)
-------------------

- Reverse post upgrade adapter ordering.
  The order was reversed, it should execute dependencies first.
  [jone]

- create-upgrade: Make sure to quote argument passed to bin/upgrade.
  [lgraf]

- Add a ``create-upgrade`` script which can be installed globally.
  [jone]

- Create a ``bin/upgrade`` script:

  - the ``create`` command creates a upgrade step in the "upgrades" directory.
  - the ``touch`` command can be used for reordering upgrade steps.

  [jone]

- New ``upgrade-step:directory`` directive for registering a directory
  with upgrade steps which are automatically detected and registered.
  [jone]

- Extend the importProfile directive so that a handler can be
  defined. The handler may import the associated upgrade step
  profile with the new method ``self.install_upgrade_profile()``.
  [jone]


1.10.2 (2014-11-19)
-------------------

- Exclude uninstalled products from upgrades view.
  [jone]

- Make upgrades appear in undo form again.
  The transaction note fix in 1.7.4 caused upgrade transaction to not appear in the undo form.
  [jone]


1.10.1 (2014-10-27)
-------------------

- Update upgrade view ordering for root nodes.
  The dependency graph does not define any order for root
  profiles (e.g. included in buildout directly), which causes
  random sorting in the upgrade view for those profiles.
  This change sorts those root profiles by name without changing